serverdepl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: project
spec:
  selector:
    matchLabels:
      app: hello
      tier: backend
  replicas: 3
  template:
    metadata:
      labels:
        app: hello
        tier: backend
    spec:
      containers:
        - name: hello-be
          image: "ashutosh150903/projbackend:1.0.0"
          ports:
            - name: hello-be-port 
              containerPort: 3000
