clientservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service-fe
  namespace: project
  labels:
    app: hello 
    tier: frontend 
spec:
  selector:
    app: hello  # Must match the labels of your Deployment's pods
    tier: frontend 
  ports:
    - protocol: TCP
      port: 80 # Port exposed by the service inside the cluster
      targetPort: 8080 # Port on which the app inside the pod is running
  type: ClusterIP  # Internal access only (default)
